--- a/index.html
+++ b/index.html
@@ -418,7 +418,7 @@
       fetchMeta();
       setInterval(fetchMeta,10000);
 
-      // ── INIT ──
+      // ── INIT ────
       resizeCanvases();
       audio.volume=vol;
       audio.play().then(()=>setPlaying(true)).catch(()=>setPlaying(false));
