--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
         <div class="logo-frame">
           <div class="logo-ring">
             <div class="logo-inner">
-              <img src="https://raw.githubusercontent.com/conectadosturadio/imagenes-clientes-web/refs/heads/main/logo%20%20color%20cariobe%20radio.jpeg" alt="Conectados Tu Radio"/>
+              <img src="https://raw.githubusercontent.com/conectadosturadio/imagenes-clientes-web/refs/heads/main/LOGO%20CONECT%20REPRO%201.jpeg" alt="Conectados Tu Radio"/>
             </div>
           </div>
         </div>
